--- a/80days/app/view1/view1.html
+++ b/80days/app/view1/view1.html
@@ -1,1 +1,7 @@
 <p>This is the partial for view 1.</p>
+
+<div ng-controller="View1Ctrl as view">
+<p>
+  foo {$ view.today $}  more foo
+</p>
+</div>
