Change date to use unix timestamps, 'cos I just learnt the angular date filter knows about them.
This is fantastic.  Just send UTC unix timestamps to the browser and get
local time in the browser.

Finally, datetimes are easy :)

--- a/80days/app/view1/view1.html
+++ b/80days/app/view1/view1.html
@@ -2,6 +2,6 @@
 
 <div ng-controller="View1Ctrl as view">
 <p>
-  foo {$ view.today $}  more foo
+  {$ view.today|date: 'yyyy/MM/dd @ h:mma' $}  
 </p>
 </div>
