Nikola auto commit.
Source commit: d6a8e13b4210bb73e7c245fd50b132d50c65c2bb
Nikola version: 7.2.0

--- a/galleries/Bermuda/index.html
+++ b/galleries/Bermuda/index.html
@@ -105,6 +105,10 @@
 <noscript>
 <ul class="thumbnails">
         <li>
+<a href="daniels_head.jpg" class="thumbnail image-reference" title="Daniels head">
+            <img src="daniels_head.thumbnail.jpg" alt="Daniels head"></a>
+        </li>
+<li>
 <a href="green_shoots.jpg" class="thumbnail image-reference" title="Green shoots">
             <img src="green_shoots.thumbnail.jpg" alt="Green shoots"></a>
 </li>
@@ -158,7 +162,7 @@
     
 <script src="../../assets/js/flowr.plugin.js"></script>
 <script>
-jsonContent = [{"title": "Green shoots", "url": "green_shoots.jpg", "size": {"w": 180, "h": 101}, "url_thumb": "green_shoots.thumbnail.jpg"}];
+jsonContent = [{"size": {"h": 101, "w": 180}, "title": "Daniels head", "url": "daniels_head.jpg", "url_thumb": "daniels_head.thumbnail.jpg"}, {"size": {"h": 101, "w": 180}, "title": "Green shoots", "url": "green_shoots.jpg", "url_thumb": "green_shoots.thumbnail.jpg"}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
