--- a/80days/app/index.html
+++ b/80days/app/index.html
@@ -12,22 +12,37 @@
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
   <link rel="stylesheet" href="app.css">
+
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
+
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
+  <section ng-init="tab.tab = 1" ng-controller="TabController as tab">
   <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
-    <li><a href="#/view3">view3</a></li>
+    <li ng-class="{ active: tab.isSelected(1) }">
+      <a href ng-click="tab.selectTab(1)">view1</a></li>
+
+    <li ng-class="{ active: tab.isSelected(2) }">
+      <a href ng-click="tab.selectTab(2)">view2</a></li>
+
+    <li ng-class="{ active: tab.isSelected(3) }">
+      <a href ng-click="tab.selectTab(3)">view3</a></li>
   </ul>
 
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
-  <div ng-view></div>
+  <div ng-view ng-show="tab.isSelected(1)" ></div>
 
   <div>Angular seed app: v<span app-version></span></div>
+  <div>tab is: {$ tab.tab $}</div>
+  </section>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
