--- a/galleries/Snowy/index.html
+++ b/galleries/Snowy/index.html
@@ -85,7 +85,7 @@
 
 <!-- End of Menubar -->
 
-<div class="container" id="content">
+<div class="container" id="content" role="main">
     <div class="body-content">
         <!--Body content-->
         <div class="row">
@@ -152,7 +152,7 @@
 <!-- End of social buttons -->
 
 
-    <script>jQuery("a.image-reference").colorbox({rel:"gal",maxWidth:"100%",maxHeight:"100%",scalePhotos:true});</script>
+    <script>jQuery("a.image-reference,!.islink").colorbox({rel:"gal",maxWidth:"100%",maxHeight:"100%",scalePhotos:true});</script>
     <!-- fancy dates -->
     <script>
     moment.locale("");
@@ -162,7 +162,7 @@
     
 <script src="../../assets/js/flowr.plugin.js"></script>
 <script>
-jsonContent = [{"title": "Packed", "url": "packed.jpg", "size": {"w": 101, "h": 180}, "url_thumb": "packed.thumbnail.jpg"}, {"title": "Coding", "url": "coding.jpg", "size": {"w": 101, "h": 180}, "url_thumb": "coding.thumbnail.jpg"}];
+jsonContent = [{"url_thumb": "packed.thumbnail.jpg", "size": {"h": 180, "w": 101}, "title": "Packed", "url": "packed.jpg"}, {"url_thumb": "coding.thumbnail.jpg", "size": {"h": 180, "w": 101}, "title": "Coding", "url": "coding.jpg"}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
