More view1 -> home changes

--- a/80days/static/app/view1/view1.html
+++ b/80days/static/app/view1/view1.html
@@ -1,6 +1,6 @@
-<p>This is the partial for view 1.</p>
+<p>This is the partial for home.</p>
 
-<div ng-controller="View1Ctrl as view">
+<div ng-controller="HomeCtrl as view">
 <p>
 <ul>
   <li> {$ view.today|date: 'yyyy/MM/dd @ h:mma' $}  </li>
