--- a/80days/static/app/index.html
+++ b/80days/static/app/index.html
@@ -22,27 +22,9 @@
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
-  <section ng-init="tab.tab = 1" ng-controller="TabController as tab">
-  <ul class="menu">
-    <li ng-class="{ active: tab.isSelected(1) }">
-      <a href ng-click="tab.selectTab(1)">Home</a></li>
+  <!-- application tabs -->
+  <app-tabs></app-tabs>
 
-    <li ng-class="{ active: tab.isSelected(2) }">
-      <a href ng-click="tab.selectTab(2)">Competitions</a></li>
-
-    <li ng-class="{ active: tab.isSelected(3) }">
-      <a href ng-click="tab.selectTab(3)">Teams</a></li>
-  </ul>
-
-  <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-  <![endif]-->
-
-  <div ng-view ng-show="tab.isSelected(1)" ></div>
-
-  <div>Angular seed app: v<span app-version></span></div>
-  <div>tab is: {$ tab.tab $}</div>
-  </section>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
