Fix grammar in text

--- a/80days/static/app/home/home.html
+++ b/80days/static/app/home/home.html
@@ -4,6 +4,6 @@
 
 <h3>{$ view.today|date $} is today's date  </h3>
 <h3>{$ (view.today + (24 * 3600 * 80 * 1000)) |date $} is 80 days from today </h3>
-<h3>{$ (view.today - (24 * 3600 * 80 * 1000)) |date $} was 80 days from ago </h3>
+<h3>{$ (view.today - (24 * 3600 * 80 * 1000)) |date $} was 80 days ago </h3>
 
 </div>
