--- a/80days/static/app/competitions/competitions.html
+++ b/80days/static/app/competitions/competitions.html
@@ -2,4 +2,12 @@
 <p>
   Showing of 'interpolate' filter:
   {$ 'Current version is v%VERSION%.' | interpolate $}
+
+  <div ng-controller="CompetitionsCtrl as comps">
+    <ul>
+      <div ng-repeat="competition in comps.competitions">
+	<li> Name: {$ competition.name $} </li>
+      </div>
+    </ul>
+  </div>
 </p>
