--- a/galleries/Bermuda/index.html
+++ b/galleries/Bermuda/index.html
@@ -85,7 +85,7 @@
 
 <!-- End of Menubar -->
 
-<div class="container" id="content" role="main">
+<div class="container" id="content">
     <div class="body-content">
         <!--Body content-->
         <div class="row">
@@ -152,7 +152,7 @@
 <!-- End of social buttons -->
 
 
-    <script>jQuery("a.image-reference,!.islink").colorbox({rel:"gal",maxWidth:"100%",maxHeight:"100%",scalePhotos:true});</script>
+    <script>jQuery("a.image-reference").colorbox({rel:"gal",maxWidth:"100%",maxHeight:"100%",scalePhotos:true});</script>
     <!-- fancy dates -->
     <script>
     moment.locale("");
@@ -162,7 +162,7 @@
     
 <script src="../../assets/js/flowr.plugin.js"></script>
 <script>
-jsonContent = [{"url_thumb": "daniels_head.thumbnail.jpg", "size": {"h": 101, "w": 180}, "title": "Daniels head", "url": "daniels_head.jpg"}, {"url_thumb": "green_shoots.thumbnail.jpg", "size": {"h": 101, "w": 180}, "title": "Green shoots", "url": "green_shoots.jpg"}];
+jsonContent = [{"size": {"h": 101, "w": 180}, "title": "Daniels head", "url": "daniels_head.jpg", "url_thumb": "daniels_head.thumbnail.jpg"}, {"size": {"h": 101, "w": 180}, "title": "Green shoots", "url": "green_shoots.jpg", "url_thumb": "green_shoots.thumbnail.jpg"}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
