--- a/galleries/Blades/index.html
+++ b/galleries/Blades/index.html
@@ -85,7 +85,7 @@
 
 <!-- End of Menubar -->
 
-<div class="container" id="content" role="main">
+<div class="container" id="content">
     <div class="body-content">
         <!--Body content-->
         <div class="row">
@@ -152,7 +152,7 @@
 <!-- End of social buttons -->
 
 
-    <script>jQuery("a.image-reference,!.islink").colorbox({rel:"gal",maxWidth:"100%",maxHeight:"100%",scalePhotos:true});</script>
+    <script>jQuery("a.image-reference").colorbox({rel:"gal",maxWidth:"100%",maxHeight:"100%",scalePhotos:true});</script>
     <!-- fancy dates -->
     <script>
     moment.locale("");
@@ -162,7 +162,7 @@
     
 <script src="../../assets/js/flowr.plugin.js"></script>
 <script>
-jsonContent = [{"url_thumb": "packed_out_at_the_hood.thumbnail.jpg", "size": {"h": 101, "w": 180}, "title": "Packed out at the hood", "url": "packed_out_at_the_hood.jpg"}, {"url_thumb": "good_company.thumbnail.jpg", "size": {"h": 101, "w": 180}, "title": "Good company", "url": "good_company.jpg"}];
+jsonContent = [{"title": "Packed out at the hood", "url": "packed_out_at_the_hood.jpg", "size": {"w": 180, "h": 101}, "url_thumb": "packed_out_at_the_hood.thumbnail.jpg"}, {"title": "Good company", "url": "good_company.jpg", "size": {"w": 180, "h": 101}, "url_thumb": "good_company.thumbnail.jpg"}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
