Nikola auto commit.
Source commit: d21a51fb76d839f47b8a77119d54a1cbc8e829f6
Nikola version: 7.2.0

--- a/galleries/Snowy/index.html
+++ b/galleries/Snowy/index.html
@@ -111,6 +111,10 @@
 <li>
 <a href="coding.jpg" class="thumbnail image-reference" title="Coding">
             <img src="coding.thumbnail.jpg" alt="Coding"></a>
+        </li>
+<li>
+<a href="dontlikethismoving.jpg" class="thumbnail image-reference" title="Dontlikethismoving">
+            <img src="dontlikethismoving.thumbnail.jpg" alt="Dontlikethismoving"></a>
 </li>
 </ul>
 </noscript>
@@ -162,7 +166,7 @@
     
 <script src="../../assets/js/flowr.plugin.js"></script>
 <script>
-jsonContent = [{"title": "Packed", "url": "packed.jpg", "size": {"w": 101, "h": 180}, "url_thumb": "packed.thumbnail.jpg"}, {"title": "Coding", "url": "coding.jpg", "size": {"w": 101, "h": 180}, "url_thumb": "coding.thumbnail.jpg"}];
+jsonContent = [{"url": "packed.jpg", "url_thumb": "packed.thumbnail.jpg", "title": "Packed", "size": {"h": 180, "w": 101}}, {"url": "coding.jpg", "url_thumb": "coding.thumbnail.jpg", "title": "Coding", "size": {"h": 180, "w": 101}}, {"url": "dontlikethismoving.jpg", "url_thumb": "dontlikethismoving.thumbnail.jpg", "title": "Dontlikethismoving", "size": {"h": 144, "w": 180}}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
