Nikola auto commit.
Source commit: 978a9f367fabc779d52ba4707174c701d697e0cb
Nikola version: 7.2.0

--- a/galleries/Blades/index.html
+++ b/galleries/Blades/index.html
@@ -162,7 +162,7 @@
     
 <script src="../../assets/js/flowr.plugin.js"></script>
 <script>
-jsonContent = [{"title": "Packed out at the hood", "url": "packed_out_at_the_hood.jpg", "size": {"w": 180, "h": 101}, "url_thumb": "packed_out_at_the_hood.thumbnail.jpg"}, {"title": "Good company", "url": "good_company.jpg", "size": {"w": 180, "h": 101}, "url_thumb": "good_company.thumbnail.jpg"}];
+jsonContent = [{"url_thumb": "packed_out_at_the_hood.thumbnail.jpg", "title": "Packed out at the hood", "url": "packed_out_at_the_hood.jpg", "size": {"h": 101, "w": 180}}, {"url_thumb": "good_company.thumbnail.jpg", "title": "Good company", "url": "good_company.jpg", "size": {"h": 101, "w": 180}}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
