--- a/galleries/Gates/index.html
+++ b/galleries/Gates/index.html
@@ -166,7 +166,7 @@
     
 <script src="../../assets/js/flowr.plugin.js"></script>
 <script>
-jsonContent = [{"url_thumb": "Me with Bill's Gates.thumbnail.jpg", "url": "Me with Bill's Gates.jpg", "size": {"h": 180, "w": 101}, "title": "Me with bill's gates"}, {"url_thumb": "i_got_the_t_shirt.thumbnail.jpg", "url": "i_got_the_t_shirt.jpg", "size": {"h": 180, "w": 101}, "title": "I got the t shirt"}, {"url_thumb": "BFBC.thumbnail.jpg", "url": "BFBC.jpg", "size": {"h": 180, "w": 101}, "title": "Bfbc"}];
+jsonContent = [{"url_thumb": "Me with Bill's Gates.thumbnail.jpg", "title": "Me with bill's gates", "url": "Me with Bill's Gates.jpg", "size": {"h": 180, "w": 101}}, {"url_thumb": "i_got_the_t_shirt.thumbnail.jpg", "title": "I got the t shirt", "url": "i_got_the_t_shirt.jpg", "size": {"h": 180, "w": 101}}, {"url_thumb": "BFBC.thumbnail.jpg", "title": "Bfbc", "url": "BFBC.jpg", "size": {"h": 180, "w": 101}}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
