--- a/galleries/Snowy/index.html
+++ b/galleries/Snowy/index.html
@@ -166,7 +166,7 @@
     
 <script src="../../assets/js/flowr.plugin.js"></script>
 <script>
-jsonContent = [{"url": "packed.jpg", "url_thumb": "packed.thumbnail.jpg", "title": "Packed", "size": {"h": 180, "w": 101}}, {"url": "coding.jpg", "url_thumb": "coding.thumbnail.jpg", "title": "Coding", "size": {"h": 180, "w": 101}}, {"url": "dontlikethismoving.jpg", "url_thumb": "dontlikethismoving.thumbnail.jpg", "title": "Dontlikethismoving", "size": {"h": 144, "w": 180}}];
+jsonContent = [{"url_thumb": "packed.thumbnail.jpg", "title": "Packed", "url": "packed.jpg", "size": {"h": 180, "w": 101}}, {"url_thumb": "coding.thumbnail.jpg", "title": "Coding", "url": "coding.jpg", "size": {"h": 180, "w": 101}}, {"url_thumb": "dontlikethismoving.thumbnail.jpg", "title": "Dontlikethismoving", "url": "dontlikethismoving.jpg", "size": {"h": 144, "w": 180}}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
