--- a/galleries/Springsteen/index.html
+++ b/galleries/Springsteen/index.html
@@ -158,7 +158,7 @@
     
 <script src="../../assets/js/flowr.plugin.js"></script>
 <script>
-jsonContent = [{"title": "Springsteen", "url": "Springsteen.jpg", "size": {"w": 101, "h": 180}, "url_thumb": "Springsteen.thumbnail.jpg"}];
+jsonContent = [{"url_thumb": "Springsteen.thumbnail.jpg", "title": "Springsteen", "url": "Springsteen.jpg", "size": {"h": 180, "w": 101}}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
