--- a/galleries/index.html
+++ b/galleries/index.html
@@ -108,6 +108,8 @@
         glyphicon-folder-open"></i> Gates</a></li>
         <li><a href="Magic/"><i class="glyphicon
         glyphicon-folder-open"></i> Magic</a></li>
+        <li><a href="RaspberryPi/"><i class="glyphicon
+        glyphicon-folder-open"></i> RaspberryPi</a></li>
         <li><a href="Snowy/"><i class="glyphicon
         glyphicon-folder-open"></i> Snowy</a></li>
         <li><a href="SpittalPond/"><i class="glyphicon
