--- a/galleries/Magic/index.html
+++ b/galleries/Magic/index.html
@@ -158,7 +158,7 @@
     
 <script src="../../assets/js/flowr.plugin.js"></script>
 <script>
-jsonContent = [{"title": "Selfie", "size": {"h": 101, "w": 180}, "url": "selfie.jpg", "url_thumb": "selfie.thumbnail.jpg"}];
+jsonContent = [{"url_thumb": "selfie.thumbnail.jpg", "title": "Selfie", "url": "selfie.jpg", "size": {"h": 101, "w": 180}}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
