Nikola auto commit.
Source commit: 111c95a64b21226d641fccdd228d262ab6bf9d14
Nikola version: 7.3.1

--- a/galleries/Bermuda/index.html
+++ b/galleries/Bermuda/index.html
@@ -163,7 +163,7 @@
     
 <script src="../../assets/js/flowr.plugin.js"></script>
 <script>
-jsonContent = [{"size": {"h": 101, "w": 180}, "url": "daniels_head.jpg", "url_thumb": "daniels_head.thumbnail.jpg", "title": "Daniels head"}, {"size": {"h": 101, "w": 180}, "url": "green_shoots.jpg", "url_thumb": "green_shoots.thumbnail.jpg", "title": "Green shoots"}];
+jsonContent = [{"url_thumb": "daniels_head.thumbnail.jpg", "size": {"w": 180, "h": 101}, "title": "Daniels head", "url": "daniels_head.jpg"}, {"url_thumb": "green_shoots.thumbnail.jpg", "size": {"w": 180, "h": 101}, "title": "Green shoots", "url": "green_shoots.jpg"}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
