--- a/galleries/Blades/index.html
+++ b/galleries/Blades/index.html
@@ -163,7 +163,7 @@
     
 <script src="../../assets/js/flowr.plugin.js"></script>
 <script>
-jsonContent = [{"size": {"h": 101, "w": 180}, "url": "packed_out_at_the_hood.jpg", "url_thumb": "packed_out_at_the_hood.thumbnail.jpg", "title": "Packed out at the hood"}, {"size": {"h": 101, "w": 180}, "url": "good_company.jpg", "url_thumb": "good_company.thumbnail.jpg", "title": "Good company"}];
+jsonContent = [{"url_thumb": "packed_out_at_the_hood.thumbnail.jpg", "size": {"w": 180, "h": 101}, "title": "Packed out at the hood", "url": "packed_out_at_the_hood.jpg"}, {"url_thumb": "good_company.thumbnail.jpg", "size": {"w": 180, "h": 101}, "title": "Good company", "url": "good_company.jpg"}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
