--- a/galleries/Gates/index.html
+++ b/galleries/Gates/index.html
@@ -167,7 +167,7 @@
     
 <script src="../../assets/js/flowr.plugin.js"></script>
 <script>
-jsonContent = [{"size": {"h": 180, "w": 101}, "url": "Me with Bill's Gates.jpg", "url_thumb": "Me with Bill's Gates.thumbnail.jpg", "title": "Me with bill's gates"}, {"size": {"h": 180, "w": 101}, "url": "i_got_the_t_shirt.jpg", "url_thumb": "i_got_the_t_shirt.thumbnail.jpg", "title": "I got the t shirt"}, {"size": {"h": 180, "w": 101}, "url": "BFBC.jpg", "url_thumb": "BFBC.thumbnail.jpg", "title": "Bfbc"}];
+jsonContent = [{"url_thumb": "Me with Bill's Gates.thumbnail.jpg", "size": {"w": 101, "h": 180}, "title": "Me with bill's gates", "url": "Me with Bill's Gates.jpg"}, {"url_thumb": "i_got_the_t_shirt.thumbnail.jpg", "size": {"w": 101, "h": 180}, "title": "I got the t shirt", "url": "i_got_the_t_shirt.jpg"}, {"url_thumb": "BFBC.thumbnail.jpg", "size": {"w": 101, "h": 180}, "title": "Bfbc", "url": "BFBC.jpg"}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
