--- a/galleries/HackBermuda/index.html
+++ b/galleries/HackBermuda/index.html
@@ -174,20 +174,20 @@
             <img src="gonzalo-modis-oct17.thumbnail.jpg" alt="Gonzalo modis oct17"></a>
         </li>
 <li>
-<a href="pi_day_pies.jpg" class="thumbnail image-reference" title="Pi day pies">
-            <img src="pi_day_pies.thumbnail.jpg" alt="Pi day pies"></a>
+<a href="piday.jpg" class="thumbnail image-reference" title="Piday">
+            <img src="piday.thumbnail.jpg" alt="Piday"></a>
         </li>
 <li>
 <a href="piday3.jpg" class="thumbnail image-reference" title="Piday3">
             <img src="piday3.thumbnail.jpg" alt="Piday3"></a>
         </li>
 <li>
-<a href="piday.jpg" class="thumbnail image-reference" title="Piday">
-            <img src="piday.thumbnail.jpg" alt="Piday"></a>
-        </li>
-<li>
 <a href="mandela.jpg" class="thumbnail image-reference" title="Mandela">
             <img src="mandela.thumbnail.jpg" alt="Mandela"></a>
+        </li>
+<li>
+<a href="pi_day_pies.jpg" class="thumbnail image-reference" title="Pi day pies">
+            <img src="pi_day_pies.thumbnail.jpg" alt="Pi day pies"></a>
 </li>
 </ul>
 </noscript>
@@ -239,7 +239,7 @@
     
 <script src="../../assets/js/flowr.plugin.js"></script>
 <script>
-jsonContent = [{"size": {"h": 101, "w": 180}, "url": "cricket.jpg", "url_thumb": "cricket.thumbnail.jpg", "title": "Cricket"}, {"size": {"h": 101, "w": 180}, "url": "20140920_121434.jpg", "url_thumb": "20140920_121434.thumbnail.jpg", "title": "121434"}, {"size": {"h": 101, "w": 180}, "url": "daniels.jpg", "url_thumb": "daniels.thumbnail.jpg", "title": "Daniels"}, {"size": {"h": 101, "w": 180}, "url": "treedownfay.jpg", "url_thumb": "treedownfay.thumbnail.jpg", "title": "Treedownfay"}, {"size": {"h": 101, "w": 180}, "url": "treedown.jpg", "url_thumb": "treedown.thumbnail.jpg", "title": "Treedown"}, {"size": {"h": 101, "w": 180}, "url": "fishing.jpg", "url_thumb": "fishing.thumbnail.jpg", "title": "Fishing"}, {"size": {"h": 101, "w": 180}, "url": "20141021_073556.jpg", "url_thumb": "20141021_073556.thumbnail.jpg", "title": "073556"}, {"size": {"h": 101, "w": 180}, "url": "treeup.jpg", "url_thumb": "treeup.thumbnail.jpg", "title": "Treeup"}, {"size": {"h": 101, "w": 180}, "url": "20141105_152803.jpg", "url_thumb": "20141105_152803.thumbnail.jpg", "title": "152803"}, {"size": {"h": 180, "w": 101}, "url": "20141206_092943.jpg", "url_thumb": "20141206_092943.thumbnail.jpg", "title": "092943"}, {"size": {"h": 101, "w": 180}, "url": "20141206_114808.jpg", "url_thumb": "20141206_114808.thumbnail.jpg", "title": "114808"}, {"size": {"h": 101, "w": 180}, "url": "snow.jpg", "url_thumb": "snow.thumbnail.jpg", "title": "Snow"}, {"size": {"h": 101, "w": 180}, "url": "horseshoe.jpg", "url_thumb": "horseshoe.thumbnail.jpg", "title": "Horseshoe"}, {"size": {"h": 101, "w": 180}, "url": "pinkandbluelimo.jpg", "url_thumb": "pinkandbluelimo.thumbnail.jpg", "title": "Pinkandbluelimo"}, {"size": {"h": 180, "w": 101}, "url": "cityhall.jpg", "url_thumb": "cityhall.thumbnail.jpg", "title": "Cityhall"}, {"size": {"h": 120, "w": 180}, "url": "americascup.jpg", "url_thumb": "americascup.thumbnail.jpg", "title": "Americascup"}, {"size": {"h": 180, "w": 132}, "url": "gonzalo-modis-oct17.jpg", "url_thumb": "gonzalo-modis-oct17.thumbnail.jpg", "title": "Gonzalo modis oct17"}, {"size": {"h": 180, "w": 135}, "url": "pi_day_pies.jpg", "url_thumb": "pi_day_pies.thumbnail.jpg", "title": "Pi day pies"}, {"size": {"h": 135, "w": 180}, "url": "piday3.jpg", "url_thumb": "piday3.thumbnail.jpg", "title": "Piday3"}, {"size": {"h": 180, "w": 135}, "url": "piday.jpg", "url_thumb": "piday.thumbnail.jpg", "title": "Piday"}, {"size": {"h": 115, "w": 180}, "url": "mandela.jpg", "url_thumb": "mandela.thumbnail.jpg", "title": "Mandela"}];
+jsonContent = [{"url_thumb": "cricket.thumbnail.jpg", "size": {"w": 180, "h": 101}, "title": "Cricket", "url": "cricket.jpg"}, {"url_thumb": "20140920_121434.thumbnail.jpg", "size": {"w": 180, "h": 101}, "title": "121434", "url": "20140920_121434.jpg"}, {"url_thumb": "daniels.thumbnail.jpg", "size": {"w": 180, "h": 101}, "title": "Daniels", "url": "daniels.jpg"}, {"url_thumb": "treedownfay.thumbnail.jpg", "size": {"w": 180, "h": 101}, "title": "Treedownfay", "url": "treedownfay.jpg"}, {"url_thumb": "treedown.thumbnail.jpg", "size": {"w": 180, "h": 101}, "title": "Treedown", "url": "treedown.jpg"}, {"url_thumb": "fishing.thumbnail.jpg", "size": {"w": 180, "h": 101}, "title": "Fishing", "url": "fishing.jpg"}, {"url_thumb": "20141021_073556.thumbnail.jpg", "size": {"w": 180, "h": 101}, "title": "073556", "url": "20141021_073556.jpg"}, {"url_thumb": "treeup.thumbnail.jpg", "size": {"w": 180, "h": 101}, "title": "Treeup", "url": "treeup.jpg"}, {"url_thumb": "20141105_152803.thumbnail.jpg", "size": {"w": 180, "h": 101}, "title": "152803", "url": "20141105_152803.jpg"}, {"url_thumb": "20141206_092943.thumbnail.jpg", "size": {"w": 101, "h": 180}, "title": "092943", "url": "20141206_092943.jpg"}, {"url_thumb": "20141206_114808.thumbnail.jpg", "size": {"w": 180, "h": 101}, "title": "114808", "url": "20141206_114808.jpg"}, {"url_thumb": "snow.thumbnail.jpg", "size": {"w": 180, "h": 101}, "title": "Snow", "url": "snow.jpg"}, {"url_thumb": "horseshoe.thumbnail.jpg", "size": {"w": 180, "h": 101}, "title": "Horseshoe", "url": "horseshoe.jpg"}, {"url_thumb": "pinkandbluelimo.thumbnail.jpg", "size": {"w": 180, "h": 101}, "title": "Pinkandbluelimo", "url": "pinkandbluelimo.jpg"}, {"url_thumb": "cityhall.thumbnail.jpg", "size": {"w": 101, "h": 180}, "title": "Cityhall", "url": "cityhall.jpg"}, {"url_thumb": "americascup.thumbnail.jpg", "size": {"w": 180, "h": 120}, "title": "Americascup", "url": "americascup.jpg"}, {"url_thumb": "gonzalo-modis-oct17.thumbnail.jpg", "size": {"w": 132, "h": 180}, "title": "Gonzalo modis oct17", "url": "gonzalo-modis-oct17.jpg"}, {"url_thumb": "piday.thumbnail.jpg", "size": {"w": 135, "h": 180}, "title": "Piday", "url": "piday.jpg"}, {"url_thumb": "piday3.thumbnail.jpg", "size": {"w": 180, "h": 135}, "title": "Piday3", "url": "piday3.jpg"}, {"url_thumb": "mandela.thumbnail.jpg", "size": {"w": 180, "h": 115}, "title": "Mandela", "url": "mandela.jpg"}, {"url_thumb": "pi_day_pies.thumbnail.jpg", "size": {"w": 135, "h": 180}, "title": "Pi day pies", "url": "pi_day_pies.jpg"}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
