--- a/galleries/Magic/index.html
+++ b/galleries/Magic/index.html
@@ -159,7 +159,7 @@
     
 <script src="../../assets/js/flowr.plugin.js"></script>
 <script>
-jsonContent = [{"size": {"h": 101, "w": 180}, "url": "selfie.jpg", "url_thumb": "selfie.thumbnail.jpg", "title": "Selfie"}];
+jsonContent = [{"url_thumb": "selfie.thumbnail.jpg", "size": {"w": 180, "h": 101}, "title": "Selfie", "url": "selfie.jpg"}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
