--- a/galleries/RaspberryPi/index.html
+++ b/galleries/RaspberryPi/index.html
@@ -163,7 +163,7 @@
     
 <script src="../../assets/js/flowr.plugin.js"></script>
 <script>
-jsonContent = [{"size": {"h": 101, "w": 180}, "url": "weather_pi.jpg", "url_thumb": "weather_pi.thumbnail.jpg", "title": "Weather pi"}, {"size": {"h": 101, "w": 180}, "url": "raspberry.jpg", "url_thumb": "raspberry.thumbnail.jpg", "title": "Raspberry"}];
+jsonContent = [{"url_thumb": "weather_pi.thumbnail.jpg", "size": {"w": 180, "h": 101}, "title": "Weather pi", "url": "weather_pi.jpg"}, {"url_thumb": "raspberry.thumbnail.jpg", "size": {"w": 180, "h": 101}, "title": "Raspberry", "url": "raspberry.jpg"}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
