--- a/galleries/Springsteen/index.html
+++ b/galleries/Springsteen/index.html
@@ -159,7 +159,7 @@
     
 <script src="../../assets/js/flowr.plugin.js"></script>
 <script>
-jsonContent = [{"size": {"h": 180, "w": 101}, "url": "Springsteen.jpg", "url_thumb": "Springsteen.thumbnail.jpg", "title": "Springsteen"}];
+jsonContent = [{"url_thumb": "Springsteen.thumbnail.jpg", "size": {"w": 101, "h": 180}, "title": "Springsteen", "url": "Springsteen.jpg"}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
